# synchrad

./: CMakeLists.txt  setup.py
ion_collapse/beam/: compute.py  histogram_movie.py  make_movie  plot  plot.py  run
ion_collapse/particle/: compute.py  make_movie  plot  plot.py  run
src/: synchrad.cxx
synchrad/: __init__.py  core.py  mle.py  plotting.py  undulator.py
validation/: validation.py
